--- a/style.css
+++ b/style.css
@@ -1,36 +1,64 @@
-
-.shadow{
-  
+.shadow {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    margin: 0 auto;
+    width: 960px;
+    background-color: white;
+    border-radius: 40px;
 }
 
-span{
-  font-size: 11px;
+
+body {
+    font-family: Arial serif;
+    color: #333333;
+    background-color: #ecf1f9;
+    padding: 50px 0;
 }
 
+
+
+span {
+  font-size: 12px;
+  color: grey;
+}
+
+h1 {
+    font-size: 36px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+h2 {
+    font-size: 28px;
+    color: black;
+}
+
+section li {
+  padding: 5px 20px;
+
+}
 
 section,
-header{
+header {
   padding: 10px 60px 20px 60px;
   width: 960px;
   margin: 0 auto;
 }
 
-header{
+header {
   background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-section{
-  background-color: aliceblue;
+section {
+  background-color: white;
 }
 
-
-
-span{
-  color: grey;
+section ul {
+  list-style:circle;
 }
+
 
 .ja{
   width: 180px;
@@ -41,73 +69,78 @@ span{
 
 }
 
-header ul{
+header ul {
   list-style: none;
-  font-size: 12px;
+  font-size: 18px;
 }
 
-header li{
+header li {
   margin-bottom: 20px;
 }
 
-header img{
+header img {
   width: 16px;
   height: 16px;
   background-color: cornflowerblue;
-  margin-right: 10px;
+  margin-right: 16px;
   border-radius: 16px;
 
 }
-
-.hobbies{
-  list-style: none;
-  padding: 0px;
-  display: flex;
-  flex-wrap: wrap;
-
+header address ul {
+    font-style: normal;
+    list-style: none;
 }
 
-.hobbies li{
-  width: 50%;
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 30px;
+.hobbies {
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.hobbies div {
-  margin-left: 20px;
-
+.hobby {
+    flex-basis: 50%;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 30px;
 }
 
-.hobbies p {
-  color: grey;
+.hobby h3 {
+    margin-top: 10px;
 }
 
-p{
-  line-height: 1.5;
+.hobby p {
+    color: grey;
+}
+
+.hobby div {
+    margin-left: 20px;
 }
 .cv {
-  border: 2px solid cornflowerblue;
+  border: 2px solid #063814;
   color: black;
   text-decoration: none;
   padding: 10px 20px;
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 40px;
   border-radius: 30px;
   transition: background-color 0.5s, color 0.5s;
   box-shadow: 0 0 20px grey;
 }
 
+.cv:visited{
+  border: 2px solid grey;
+}
 
 .cv:hover{
   color: white;
-  background-color: cornflowerblue;
+  background-color: #063814;
 }
 
 .cv:focus{
   outline: none;
   color: white;
-  background-color: cornflowerblue;
+  background-color: #063814;
 }
 
 .cv:active{
