--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 header {
-  background-color: white;
+  background-color: #42e3f5;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -65,7 +65,7 @@ section ul {
   height: 180px;
   margin-right: 70px;
   border-radius: 50%;
-  border: 10px inset;
+  border: 10px inset #42e3f5;
 
 }
 
@@ -124,7 +124,7 @@ header address ul {
   display: inline-block;
   margin-top: 40px;
   border-radius: 30px;
-  transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.8s, color 0.8s;
   box-shadow: 0 0 20px grey;
 }
 
